--- a/ObliqueViewer/assets/css/styles.css
+++ b/ObliqueViewer/assets/css/styles.css
@@ -4201,10 +4201,10 @@ button.usa-combo-box__clear-input:focus {
   color: #54278f;
 }
 .usa-button--unstyled:hover {
-  color: #1a4480;
+  color: #B11116;
 }
 .usa-button--unstyled:active {
-  color: #162e51;
+  color: #850d12;
 }
 .usa-button--unstyled:focus {
   outline: 0.25rem solid #2491ff;
@@ -4221,10 +4221,10 @@ button.usa-combo-box__clear-input:focus {
   color: #c9c9c9;
 }
 .usa-button--unstyled.usa-button--hover {
-  color: #1a4480;
+  color: #B11116;
 }
 .usa-button--unstyled.usa-button--active {
-  color: #162e51;
+  color: #850d12;
 }
 
 /*
