--- a/ObliqueViewer/assets/css/styles.css
+++ b/ObliqueViewer/assets/css/styles.css
@@ -4005,20 +4005,20 @@ button.usa-combo-box__clear-input:focus {
 
 .usa-button--outline {
   background-color: transparent;
-  box-shadow: inset 0 0 0 2px #005ea2;
-  color: #005ea2;
+  box-shadow: inset 0 0 0 2px #B11116;
+  color: #B11116;
 }
 .usa-button--outline:visited {
-  color: #005ea2;
+  color: #B11116;
 }
 .usa-button--outline:hover, .usa-button--outline.usa-button--hover {
   background-color: transparent;
-  box-shadow: inset 0 0 0 2px #1a4480;
+  box-shadow: inset 0 0 0 2px #B11116;
   color: #1a4480;
 }
 .usa-button--outline:active, .usa-button--outline.usa-button--active {
   background-color: transparent;
-  box-shadow: inset 0 0 0 2px #162e51;
+  box-shadow: inset 0 0 0 2px #8b0a03;
   color: #162e51;
 }
 .usa-button--outline.usa-button--inverse {
