--- a/ObliqueViewer/assets/css/styles.css
+++ b/ObliqueViewer/assets/css/styles.css
@@ -2986,7 +2986,7 @@ abbr[title=required] {
 }
 
 .usa-select {
-  background-image: url("../img/usa-icons/unfold_more.svg"), linear-gradient(transparent, transparent);
+  background-image: url("../img/unfold_more.svg"), linear-gradient(transparent, transparent);
   background-repeat: no-repeat;
   appearance: none;
   background-color: white;
